Article 2 of MAGISFML done

--- a/_sass/skins/highlight/tomorrow/_default.scss
+++ b/_sass/skins/highlight/tomorrow/_default.scss
@@ -7,4 +7,4 @@ $highlight-yellow       : #eab700;
 $highlight-green        : #718c00;
 $highlight-aqua         : #3e999f;
 $highlight-blue         : #4271ae;
-$highlight-purple       : #8959a8;
+$highlight-purple       : #9a37db;
