--- a/_sass/skins/highlight/tomorrow/_night.scss
+++ b/_sass/skins/highlight/tomorrow/_night.scss
@@ -1,10 +1,10 @@
-$highlight-background   : #1d1f21;
+$highlight-background   : #333;
 $highlight-foreground   : #c5c8c6;
 $highlight-comment      : #969896;
 $highlight-red          : #c66;
-$highlight-orange       : #de935f;
-$highlight-yellow       : #f0c674;
-$highlight-green        : #b5bd68;
-$highlight-aqua         : #8abeb7;
-$highlight-blue         : #81a2be;
-$highlight-purple       : #b294bb;
+$highlight-orange       : #e2792e;
+$highlight-yellow       : #e4aa38;
+$highlight-green        : #c2d13c;
+$highlight-aqua         : #6ef6e4;
+$highlight-blue         : #4398e2;
+$highlight-purple       : #d891ee;
