--- a/_includes/article-list.html
+++ b/_includes/article-list.html
@@ -126,12 +126,11 @@
             </div>
         </div>
       {%- else -%}
-      <div class="cell cell--12 cell--md-6 cell--lg-4 border">
-          
+      <div class="cell cell--12 cell--md-6 cell--lg-4 ">
           <div class="card card--flat">
             <a href="{{ _article_url }}">
             {%- if _article.cover -%}
-              <div class="card__image"><img src="{{ _article_cover }}" /></div>
+              <div class="card__image"><img src="{{ _article_cover }}" style="height:20em;object-fit: cover;"/></div>
             {%- endif -%}
               <div class="card__content">
                 <header>
